--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
