--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.7",
+    "country-state-city": "^3.2.1",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
