--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.7",
     "country-state-city": "^3.2.1",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "moment": "^2.30.1",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
@@ -24,8 +27,10 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-to-print": "^3.1.1",
     "react-toggle": "^4.1.3",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "scripts": {
