--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.3",
+    "react-model": "^4.3.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
